Tweaked colours of 'Data available' chart and links. Also fixed spacing.

--- a/kp_frontpage.css
+++ b/kp_frontpage.css
@@ -1000,6 +1000,6 @@ div.kp-homepage-tool-tip {
 }
 
 .block-news-updates p a {
-  color: #13b72d;
+  color: #85B668;
   font-size: 0.9em;
 }
